fixed gap size

--- a/src/stylesheets/slices/_stat_listing.scss
+++ b/src/stylesheets/slices/_stat_listing.scss
@@ -67,7 +67,7 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 20px;
+    gap: 140px;
     background-color: $color-blue_light;
     padding: 35px;
     font-weight: 900;
